# coin-trader

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: default.toml
scripts/: migrate_v1_data.py
src/coin_trader/: __init__.py  __main__.py  cli.py  config.py
src/coin_trader/ai/: codex_engineer.py  conversation.py  opus_analyst.py  orchestrator.py  prompts.py
src/coin_trader/data/: coingecko.py  fear_greed.py  lunarcrush.py  notice_fetcher.py  protocols.py  upbit.py
src/coin_trader/domain/: evolution.py  models.py  portfolio.py  risk.py  strategy.py
src/coin_trader/execution/: engine.py  live.py  paper.py
src/coin_trader/graph/: client.py  coin_network.py  event_propagation.py  strategy_lineage.py
src/coin_trader/persistence/: database.py  redis.py  repositories.py
src/coin_trader/reporting/: daily_report.py  leaderboard.py
src/coin_trader/strategies/: dip_buy.py  fear_greed.py  momentum.py  notice_alpha.py  registry.py  volatility_breakout.py  volume_surge.py
src/coin_trader/stream/: handlers.py  redis_bus.py  websocket.py
tests/: conftest.py
tests/e2e/: test_full_cycle.py
tests/integration/: test_execution_engine.py  test_graph.py
tests/unit/: test_ai.py  test_config.py  test_data_sources.py  test_evolution.py  test_models.py  test_portfolio.py  test_redis_bus.py  test_reporting.py  test_risk.py  test_strategies_extra.py  test_strategy_registry.py  test_websocket.py
tests/unit/strategies/: test_dip_buy.py  test_momentum.py
