[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coin-trader"
version = "0.1.0"
description = "Real-time AI coin trading bot with Opus 4.6 + Codex 5.3"
requires-python = ">=3.9"
dependencies = [
    "pyupbit>=0.2.33",
    "pandas>=2.0",
    "numpy>=1.24",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "falkordb>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "typer>=0.9",
    "rich>=13.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "structlog>=24.1",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.8",
    "aioresponses>=0.7",
    "fakeredis>=2.21",
]

[project.scripts]
coin-trader = "coin_trader.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/coin_trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/coin_trader --cov-report=term-missing -v"
markers = [
    "integration: integration tests requiring external services",
    "e2e: end-to-end tests",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["UP006", "UP007", "UP035", "UP045", "TC001", "TC003"]  # typing compat (3.9); TC00x breaks runtime imports

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyupbit.*", "falkordb.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/coin_trader"]

[tool.coverage.report]
fail_under = 55
